--- a/Shopping/Views/Products/ViewProduct.cshtml
+++ b/Shopping/Views/Products/ViewProduct.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "ViewProduct";
 }
 
-    <a asp-action="ViewProducts">Back to List</a>
+    <a asp-action="ViewProducts"><i class="material-icons">arrow_back</i></a>
 
 <h1>@Model.ProductName</h1>
 
