--- a/Shopping/Views/Customers/AddCustomer.cshtml
+++ b/Shopping/Views/Customers/AddCustomer.cshtml
@@ -5,7 +5,7 @@
 
     <div class="row">
         <div class="col-5 offset-3">
-            <a asp-controller="Order" asp-action="Index">Back</a>
+            <a asp-controller="Order" asp-action="Index"><i class="material-icons">arrow_back</i></a>
 
             <h1>Add Customer</h1>
 
@@ -17,7 +17,7 @@
                 </div>
 
                 <div class="form-group">
-                    <input class="btn btn-primary" type="submit" />
+                    <input class="btn btn-primary" value="Add" type="submit" />
                 </div>
             </form>
         </div>
