--- a/Shopping/Views/Products/AddProduct.cshtml
+++ b/Shopping/Views/Products/AddProduct.cshtml
@@ -5,7 +5,7 @@
 
 <div class="row">
     <div class="col-5 offset-3">
-        <a asp-controller="Products" asp-action="ViewProducts">Back to Products</a>
+        <a asp-controller="Products" asp-action="ViewProducts"><i class="material-icons">arrow_back</i></a>
         <h1>Add Product</h1>
 
 
@@ -26,7 +26,7 @@
                 <span class="text-danger" asp-validation-for="@Model.QuantityAtHand"></span>
             </div>
             <div class="row">
-                <input class="col-2 offset-5 align-self-center btn btn-primary" type="submit" />
+                <input class="col-2 offset-5 align-self-center btn btn-primary" value="Add" type="submit" />
             </div>
         </form>
     </div>
