--- a/Shopping/Views/Products/ViewProducts.cshtml
+++ b/Shopping/Views/Products/ViewProducts.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "ViewProducts";
 }
 
-<a class="btn btn-link" asp-controller="Order" asp-action="Index">Back</a>
+<a class="btn btn-link" asp-controller="Order" asp-action="Index"><i class="material-icons">arrow_back</i></a>
 
 <h1>All Products</h1>
 <a class="btn btn-secondary" asp-action="AddProduct">Add New</a>
