--- a/Shopping/Views/Order/ViewOrder.cshtml
+++ b/Shopping/Views/Order/ViewOrder.cshtml
@@ -1,4 +1,4 @@
-﻿@model Shopping.Models.OrderViewModel
+﻿@model Shopping.ViewModels.OrderViewModel
 @{
     ViewData["Title"] = "View Order";
     int lineIdCount = 0;
