--- a/Shopping/Views/Products/ViewProducts.cshtml
+++ b/Shopping/Views/Products/ViewProducts.cshtml
@@ -1,4 +1,4 @@
-﻿@model Shopping.Models.ProductsViewModel
+﻿@model Shopping.ViewModels.ProductsViewModel
 @{
     ViewData["Title"] = "ViewProducts";
 }
